tests/invalid/Cast_Invalid_2.whiley
type R1 is {real x}

function f([real] xs) -> [int]:
    return ([int]) xs
